--- a/mvpdemo/src/main/res/layout/activity_login.xml
+++ b/mvpdemo/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="yt.mvpdemo.ui.activity.LoginActivity">
+    tools:context=".mvp.ui.activity.LoginActivity">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
