12  7 拍照上传功能demo完成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,5 @@
         tools:layout_editor_absoluteX="183dp"
         tools:layout_editor_absoluteY="0dp"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/button" />
+        android:layout_toEndOf="@+id/btn_photo_upload" />
 </RelativeLayout>
