--- a/app/src/main/res/layout/activity_photo_upload.xml
+++ b/app/src/main/res/layout/activity_photo_upload.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.yt.daydaystudy.takephoto.PhotoUploadActivity">
+    tools:context="com.yt.daydaystudy.demo_takephoto.PhotoUploadActivity">
 
     <Button
         android:id="@+id/btn_takephoto"
