--- a/app/src/main/res/layout/activity_green_dao.xml
+++ b/app/src/main/res/layout/activity_green_dao.xml
@@ -1,9 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.yt.daydaystudy.demo_greendao.GreenDaoActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button"
+        android:onClick="add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="增"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="-6dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:onClick="del"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="删"
+        tools:layout_editor_absoluteX="112dp"
+        tools:layout_editor_absoluteY="3dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/button" />
+
+    <Button
+        android:id="@+id/button3"
+        android:onClick="update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="改"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/button2" />
+
+    <Button
+        android:onClick="find"
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="查"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/button3" />
+</RelativeLayout>
