--- a/app/src/main/res/layout/activity_green_dao.xml
+++ b/app/src/main/res/layout/activity_green_dao.xml
@@ -44,4 +44,12 @@
         android:text="查"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/button3" />
+
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button"
+        android:layout_marginTop="38dp" />
 </RelativeLayout>
