--- a/demo_oneactivity_multifragment/src/main/res/values/styles.xml
+++ b/demo_oneactivity_multifragment/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--
+    当我们从 A1 启动 A2 时，A1 从屏幕上消失，这个动画叫做 android:activityOpenExitAnimation
+    当我们从 A1 启动 A2 时，A2 出现在屏幕上，这个动画叫做 android:activityOpenEnterAnimation
+    当我们从 A2 退出回到 A1 时，A2 从屏幕上消失，这个叫做 android:activityCloseExitAnimation
+    当我们从 A2 退出回到 A1 时，A1 出现在屏幕上，这个叫做 android:activityCloseEnterAnimation
+    -->
+    <style name="ActivityAnim" parent="android:Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/push_in_left</item>
+        <item name="android:activityCloseEnterAnimation">@anim/push_in_right</item>
+        <item name="android:activityCloseExitAnimation">@anim/push_out_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/push_out_left</item>
+    </style>
 </resources>
