--- a/demo_oneactivity_multifragment/src/main/res/layout/fragment_two.xml
+++ b/demo_oneactivity_multifragment/src/main/res/layout/fragment_two.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -12,27 +12,25 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
-        android:onClick="back"
         android:text="返回" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button"
-        android:layout_toEndOf="@+id/button"
-        android:layout_toRightOf="@+id/button"
-        android:onClick="startNextFragment"
+        android:layout_alignBottom="@+id/btn_back"
+        android:layout_toEndOf="@+id/btn_back"
+        android:layout_toRightOf="@+id/btn_back"
         android:text="跳到下一个界面" />
 
-    <Button
-        android:id="@+id/button3"
+    <EditText
+        android:id="@+id/et_input"
         android:layout_width="wrap_content"
+        android:hint="设置名称"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
-        android:layout_toEndOf="@+id/button2"
-        android:layout_toRightOf="@+id/button2"
-        android:text="Button" />
+        android:layout_toEndOf="@+id/btn_start"
+        android:layout_toRightOf="@+id/btn_start" />
 </RelativeLayout>
