--- a/app/src/main/res/layout/item_rv.xml
+++ b/app/src/main/res/layout/item_rv.xml
@@ -3,6 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="140dp"
+        android:id="@+id/iv"
+        android:layout_margin="10dp"
+        android:scaleType="centerCrop"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
