--- a/demo_kotlin/src/main/res/values/colors.xml
+++ b/demo_kotlin/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#fff</color>
     <color name="gray" >#848383</color>
+    <color name="black">#000</color>
 </resources>
