--- a/demo_kotlin/src/main/res/layout/activity_main2.xml
+++ b/demo_kotlin/src/main/res/layout/activity_main2.xml
@@ -1,100 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:textSize="16sp"
-                android:id="@+id/tv_bar_title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-            <ImageView
-                android:layout_marginRight="10dp"
-                android:id="@+id/iv_search"
-                android:src="@drawable/icon_search"
-                android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
-        </RelativeLayout>
-
-    </android.support.v7.widget.Toolbar>
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <FrameLayout
-        android:layout_above="@id/rg_root"
-        android:layout_below="@id/toolbar"
-        android:id="@+id/fl_content"
+        android:id="@+id/fl_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </FrameLayout>
+        android:layout_height="match_parent" />
+
     <View
-        android:layout_above="@+id/rg_root"
-        android:background="@color/gray"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"></View>
-    <RadioGroup
-        android:id="@+id/rg_root"
+        android:layout_height="0.5dp"
+        android:layout_above="@+id/tab_layout"
+        android:background="@color/color_gray" />
+
+
+    <com.github.mmin18.widget.RealtimeBlurView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:background="@color/color_title_bg"
+        />
 
-        <RadioButton
-            android:textSize="10sp"
-            android:id="@+id/rb_home"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@null"
-            android:textColor="@color/gray"
-            android:drawableTop="@drawable/home_bg_selected"
-            android:gravity="center"
-            android:text="首页"/>
-        <RadioButton
-            android:textSize="10sp"
-            android:id="@+id/rb_find"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@null"
-            android:textColor="@color/gray"
-            android:drawableTop="@drawable/find_bg_selected"
-            android:gravity="center"
-            android:text="发现"
-            />
-
-        <RadioButton
-            android:textSize="10sp"
-            android:id="@+id/rb_hot"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@null"
-            android:textColor="@color/gray"
-            android:drawableTop="@drawable/hot_bg_selected"
-            android:gravity="center"
-            android:text="热门"/>
-        <RadioButton
-            android:textSize="10sp"
-            android:id="@+id/rb_mine"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/gray"
-            android:button="@null"
-            android:drawableTop="@drawable/mine_bg_selected"
-            android:gravity="center"
-            android:text="我的"/>
-    </RadioGroup>
+    <com.flyco.tablayout.CommonTabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/color_translucent"
+        app:tl_divider_color="@color/color_black"
+        app:tl_iconHeight="23dp"
+        app:tl_iconWidth="23dp"
+        app:tl_indicator_color="@color/colorPrimary"
+        app:tl_indicator_height="0dp"
+        app:tl_textSelectColor="@color/color_black"
+        app:tl_textUnselectColor="@color/color_gray"
+        app:tl_textsize="10sp"
+        app:tl_underline_color="#DDDDDD"
+        app:tl_underline_height="1dp" />
 
 </RelativeLayout>
