--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.yt.daydaystudy.MainActivity">
 
-    <GridView
-        android:id="@+id/gv"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:horizontalSpacing="2dp"
-        android:numColumns="4"
-        android:scrollbars="none"
-        android:verticalSpacing="2dp"></GridView>
+        android:layout_height="match_parent"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp" />
 </RelativeLayout>
